# lightgraph

./: .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  MIGRATION.md  README.md  conanfile.py
.github/workflows/: ci.yml  pages.yml
benchmarks/: core_benchmark.cpp
cmake/: lightgraphConfig.cmake.in  version.hpp.in
docs/: API.md  API_POLICY.md  BUILD_AND_INTEGRATION.md  CORE_AUDIT_REPORT.md  PACKAGING.md  RELEASE.md  TOPOLOGY_AUTHORING.md
examples/: integration_host_loop.cpp  minimal_usage.cpp
include/lightgraph/: engine.hpp  integration.hpp  lightgraph.hpp  status.hpp  types.hpp
include/lightpath/: debug.hpp  engine.hpp  integration.hpp  lightpath.hpp  objects.hpp  rendering.hpp  runtime.hpp  status.hpp  topology.hpp  types.hpp
packaging/vcpkg/: portfile.cmake  vcpkg.json
scripts/: check-benchmark.sh  check-clang-format.sh
src/: Behaviour.h  BgLight.h  Config.h  Connection.h  EmitParams.h  FastNoise.h  Globals.cpp  Globals.h  HashMap.h  Intersection.cpp  Intersection.h  LPDebugger.cpp  LPDebugger.h  LPLight.h  LPObject.cpp  LPObject.h  LPOwner.h  LPRandom.cpp  Light.h  LightList.cpp  LightList.h  Model.h  Palette.cpp  Palette.h  Palettes.h  Port.cpp  Port.h  Random.cpp  Random.h  State.h  Weight.h  ofxEasing.h
src/api/: Engine.cpp
src/core/: Limits.h  Types.h  (+1 more)
tests/: api_fuzz_test.cpp  core_mutation_edge_test.cpp  core_regression_test.cpp  core_remote_template_motion_test.cpp  core_smoke_test.cpp  core_topology_emit_test.cpp  public_api_test.cpp
tests/package_smoke/: CMakeLists.txt  main.cpp  run.cmake
(+72 files in other folders)
